[tool.poetry]
name = "repl-nix-studyassistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_studyassistant"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
